# value-discovery-agent

./: .gitignore  langgraph.json  pyproject.toml
src/meta_agent/: README.md  graph.py  knowledge.py  opik_logger.py  prompts.py
src/meta_agent_v2/: README.md  __init__.py  graph.py  knowledge.py  prompts.py  state.py
src/meta_agent_v3/: __init__.py  graph.py  knowledge.py  nodes.py  opik_logger.py  prompts.py  router.py  state.py  utils.py
src/meta_agent_v4/: README.md  __init__.py  graph.py  knowledge.py  nodes.py  opik_logger.py  prompts.py  router.py  state.py  utils.py
src/meta_agent_v4/templates/: introduction.j2  stage1_meta.j2  stage1_validation.j2  stage2_meta.j2  stage2_validation.j2  stage3_meta.j2  stage3_validation.j2  stage4_meta.j2  stage4_validation.j2  system_prompt.j2
src/react_agent/: context.py  graph.py
