[project]
name = "value-discovery-agent"
version = "0.0.1"
description = "Intent-aware conversational agent that uses meta-prompting to dynamically generate questions and build a knowledge graph of user values and goals."
authors = []
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=1.0.0",
    "langchain-openai>=0.1.22",
    "langchain-anthropic>=0.1.23",
    "langchain-google-genai>=4.0.0",
    "langchain>=0.2.14",
    "langchain-fireworks>=0.1.7",
    "python-dotenv>=1.0.1",
    "langchain-tavily>=0.1",
    "opik>=1.9.51",
    "langgraph-api>=0.6.11",
    "langgraph-cli>=0.4.11",
    "litellm>=1.80.5",
    "ruff>=0.9.10",
    "uvicorn>=0.40.0",
    "cryptography>=46.0.3",
    "fireworks-ai>=0.17.5",
    "sse-starlette>=2.1.3",
    "grpcio-tools>=1.75.1",
    "jsonschema-rs>=0.29.1",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.react_agent", "react_agent", "meta_agent", "meta_agent_v2"]
[tool.setuptools.package-dir]
"langgraph.templates.react_agent" = "src/react_agent"
"react_agent" = "src/react_agent"
"meta_agent" = "src/meta_agent"
"meta_agent_v2" = "src/meta_agent_v2"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "langgraph-cli[inmem]>=0.4.7",
    "pytest>=8.3.5",
]
